--- a/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.html
+++ b/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Grid Gallery</title>
+        <title>Commissions</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
         <link rel="stylesheet" href="grid-gallery.css">
@@ -13,7 +13,7 @@
         <section class="gallery-block grid-gallery">
             <div class="container">
                 <div class="heading">
-                    <h2>Grid Gallery</h2>
+                    <h2>Commissions</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-12 item">
