Attempting to solve the problem

--- a/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.html
+++ b/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.html
@@ -7,7 +7,7 @@
         <title>Commissions</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
-        <link rel="stylesheet" href="grid-gallery.css">
+        <link rel="stylesheet" href="DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.css">
     </head>
     <body>
         <section class="gallery-block grid-gallery">
@@ -44,6 +44,7 @@
                     <div class="col-md-6 col-lg-6 item">
                         <a class="lightbox" href="../img/16.jpg">
                             <img class="img-fluid image scale-on-hover" src="../img/16.jpg">
+                            </a>
                     </div>
         
                 </div>
