--- a/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery3.html
+++ b/DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery3.html
@@ -7,7 +7,7 @@
         <title> School Projects</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
-        <link rel="stylesheet" href="grid-gallery.css">
+        <link rel="stylesheet" href="DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.css">
     </head>
     <body>
         <section class="gallery-block grid-gallery">
