--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Maria Galea</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/DGA3009-Assignment/website/website_mariagalea/Stylesheets/css/main.min.css">
+  <link rel="stylesheet" href="DGA3009-Assignment/website/website_mariagalea/Stylesheets/css/main.min.css">
 </head>
 
 <!-- Navigation -->
@@ -50,7 +52,7 @@
   <header>
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="/DGA3009-Assignment/website/website_mariagalea/images/INTROVIDEO.mp4" type="video/mp4">
+      <source src="DGA3009-Assignment/website/website_mariagalea/images/INTROVIDEO.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
@@ -72,6 +74,7 @@
             narrative, juxtaposed with enigmatic elements .
 
             Maria is currently reading for her BA in Digital Arts at the University of Malta</p>
+            
         </div>
       </div>
 
@@ -89,8 +92,8 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href="grid-gallery/grid-gallery3.html">
-          <img src="/DGA3009-Assignment/website/website_mariagalea/images/2_14.JPG" class="d-block w-100" alt="...">
+        <a href="DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery3.html">
+          <img src="DGA3009-Assignment/website/website_mariagalea/images/2_14.JPG" class="d-block w-100" alt="...">
         </a>
 
         <div class="carousel-caption d-none d-md-block">
@@ -100,8 +103,8 @@
         </div>
       </div>
       <div class="carousel-item">
-        <a href="grid-gallery/grid-gallery.html">
-          <img src="/DGA3009-Assignment/website/website_mariagalea/images/commision.jpg" class="d-block w-100" alt="...">
+        <a href="DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery.html">
+          <img src="DGA3009-Assignment/website/website_mariagalea/images/commision.jpg" class="d-block w-100" alt="...">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h2>Commissions</h2>
@@ -109,8 +112,8 @@
         </div>
       </div>
       <div class="carousel-item">
-        <a href="grid-gallery/grid-gallery2.html">
-          <img src="/DGA3009-Assignment/website/website_mariagalea/images/prints.jpg" class="d-block w-100" alt="...">
+        <a href="DGA3009-Assignment/website/website_mariagalea/Pages/grid-gallery/grid-gallery2.html">
+          <img src="DGA3009-Assignment/website/website_mariagalea/images/prints.jpg" class="d-block w-100" alt="prints">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h2>Prints</h2>
@@ -187,7 +190,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 center-block">
-                    <form id="contactform" action="//formspree.io/adriana612@outlook.com" method="POST">
+                    <form id="contactform" action="//formspree.io/maria.galea1999@gmail.com" method="POST">
                         <div class="col-sm-7 slideanim">
                             <div class="row">
                                 <div class="col-sm-6 form-group">
